# mauka_mcp

./: .gitignore  .windsurfrules  Cargo.toml  todo.md
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: release.yml  rust-ci.yml
benches/: mauka_benchmarks.rs
docs/: spec.md
src/: bench.rs  lib.rs  main.rs
src/config/: cache.rs  http.rs  limits.rs  mod.rs  security.rs  server.rs
src/data_structures/: mod.rs
src/data_structures/boyer_moore_matcher/: error.rs  matcher.rs  mod.rs  preprocess.rs  tables.rs
src/data_structures/boyer_moore_matcher/tests/: benchmark_tests.rs  mod.rs  property_tests.rs
src/data_structures/kahuna_queue/: mod.rs  node.rs
src/data_structures/kona_bloom_filter/: config.rs  error.rs  filter.rs  hash.rs  mod.rs
src/data_structures/niihau_trie/: error.rs  mod.rs  node.rs
src/data_structures/puka_cuckoo_hash/: config.rs  error.rs  hash.rs  mod.rs  table.rs
src/error/: config.rs  http.rs  mod.rs  protocol.rs  transport.rs
src/protocol/: mod.rs
src/protocol/jsonrpc/: correlation.rs  error.rs  handler.rs  mod.rs  setup.rs  types.rs  validation.rs
src/protocol/jsonrpc/methods/: initialize.rs  mod.rs  tools_list.rs
src/protocol/jsonrpc/tests/: integration_tests.rs  mod.rs  property_tests.rs  unit_tests.rs
src/tests/: config_tests.rs  error_tests.rs  kahuna_queue_tests.rs  kona_bloom_filter_tests.rs  mod.rs  test_utils.rs
src/utils/: mod.rs
tests/: kona_bloom_filter_test.rs
