[package]
name = "mauka_mcp"
version = "0.1.0"
edition = "2021"
authors = ["Mauka MCP Team"]
description = "MCP Server with advanced caching and protocol handling capabilities"
license = "MIT"
repository = "https://github.com/example/mauka_mcp"
readme = "README.md"
documentation = "https://docs.rs/mauka_mcp"

[dependencies]
# Command-line argument parsing
clap = { version = "4.4", features = ["derive"] }
# CPU information
num_cpus = "1.16"
# Async runtime
tokio = { version = "1.33", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"
tracing-error = "0.2"

# Configuration
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
# Temporary file handling for tests
tempfile = "3.8"
tokio-test = "0.4"
mockall = "0.11"
proptest = "1.3"
test-case = "3.2"
criterion = "0.5"

[features]
default = []
benchmarking = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
debug = true

[profile.bench]
inherits = "release"
debug = true
