[package]
name = "mauka_mcp"
version = "0.1.0"
edition = "2021"
authors = ["Mauka MCP Team"]
description = "MCP Server with advanced caching and protocol handling capabilities"
license = "MIT"
repository = "https://github.com/example/mauka_mcp"
readme = "README.md"
documentation = "https://docs.rs/mauka_mcp"
# Enable documentation generation for private items during development
rustdoc-args = ["--document-private-items"]
# Ensure all code is documented
default-run = "mauka_mcp"

[dependencies]
# Command-line argument parsing
clap = { version = "4.4", features = ["derive"] }
# CPU information
num_cpus = "1.16"
# Async runtime
tokio = { version = "1.33", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"
tracing-error = "0.2"

# Configuration
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
toml = "0.8"
once_cell = "1.18"

# Hashing
fnv = "1.0.7"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dashmap = { version = "6.1.0", features = ["serde"] }
hashbrown = { version = "0.15.4", features = ["serde"] }

[dev-dependencies]
# Temporary file handling for tests
tempfile = "3.8"
tokio-test = "0.4"
mockall = "0.11"
proptest = "1.3"
test-case = "3.2"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
benchmarking = []
test-utils = []

[[bench]]
name = "mauka_benchmarks"
harness = false
required-features = ["benchmarking"]

[lib]
name = "mauka_mcp_lib"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true  # Strip symbols from binary
overflow-checks = true  # Safety first, even in release mode
debug = false

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = true  # Include debug symbols for profiling
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
